src/app/dim-ui/PressTip.m.scss
@use '../variables.scss' as *;

$arrow-size: 10px; // ensure this stays in sync with 'popperArrowSize' in 'usePopper.ts'
$border-color: #5d5970;
$horizontal-padding: 8px;
$half-arrow-size: $arrow-size / 2;

.arrow {
  width: $arrow-size;
  height: $arrow-size;
  border-width: 0;
  border-style: solid;
  position: absolute;
  border-color: $border-color;
}

.control {
  user-select: none;
  touch-action: none;
  -webkit-touch-callout: none;
}

.header {
  h2 {
    font-size: 14px;
    margin: 0;
    color: white;
  }
  h3 {
    font-size: 12px;
    margin: 0;
    color: #aaa;
  }
}

.content {
  width: fit-content;
  padding: 8px $horizontal-padding;
  border: 1px solid $border-color;
  border-top: 5px solid var(--ribbon-color);
}

.tooltip {
  position: absolute;
  background-color: #14141f;
  color: white;
  width: fit-content;
  max-width: 300px;
  box-shadow: 0 0 4px 2px #16162680;
  text-align: left;
  z-index: 99999;
  white-space: pre-wrap;
  box-sizing: border-box;
  user-select: none;

  --ribbon-color: #8e8e9e;

  &.wideTooltip {
    max-width: 100vw;
  }

  .header {
    background-color: #070709;
    padding: 6px $horizontal-padding;
    margin: -8px #{-$horizontal-padding} 6px #{-$horizontal-padding};

    h2 {
      @include destiny-header;
    }
  }

  hr {
    border-color: $border-color;
  }

  p {
    margin-bottom: 0;
  }

  &[data-popper-placement='top'] .arrow {
    width: 0;
    height: 0;
    border-width: $half-arrow-size $half-arrow-size 0 $half-arrow-size;
    border-left-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    bottom: -$half-arrow-size;
  }
  &[data-popper-placement='bottom'] .arrow {
    width: 0;
    height: 0;
    border-width: 0 $half-arrow-size $half-arrow-size $half-arrow-size;
    top: -$half-arrow-size;
    border-color: transparent transparent var(--ribbon-color) transparent;
  }
  &[data-popper-placement='right'] .arrow {
    width: 0;
    height: 0;
    border-width: $half-arrow-size $half-arrow-size $half-arrow-size 0;
    border-left-color: transparent;
    border-top-color: transparent;
    border-bottom-color: transparent;
    left: -$half-arrow-size;
  }
  &[data-popper-placement='left'] .arrow {
    width: 0;
    height: 0;
    border-width: $half-arrow-size 0 $half-arrow-size $half-arrow-size;
    border-top-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    right: -$half-arrow-size;
  }

  &.minimalTooltip {
    border-radius: 3px;
    --ribbon-color: #{$border-color};

    .content {
      padding: 3px 6px;
      border-top: 1px solid $border-color;
      border-radius: 3px;
    }
  }

  .section:not(:empty) {
    margin: 6px #{-$horizontal-padding} -8px #{-$horizontal-padding};
    padding: 4px $horizontal-padding 6px $horizontal-padding;
    border-top: 1px solid rgba($border-color, 0.4);

    > :first-child {
      margin-top: 0;
    }

    > :last-child {
      margin-bottom: 0;
    }
  }
}

@mixin tooltip-section-color($color) {
  &:not(:empty) {
    background-color: rgba($color, 0.15);
    border-top-color: rgba($color, 0.5);
  }
}

